css/styles.css
/*Estilos generales para Glaciares UNAHUR*/
:root {
    --verde-call-to-action: #2E7D32;
    --gris-texto: #4A4A4A;
    --fondo-general: #E6F2F8;
    --fondo-secundario: #ABCDE1;
    --seccion-clave: #2D7D9D;
    --encabezado-destacado: #1E5ABA; 
    --destacado-impacto: #1E5A8A;

}

/* Reset para eliminar todos los márgenes y rellenos predeterminados*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*
Pegar en el head antes de linkear al archivo styles.css para importar los tipos de letras y
Para vincular :
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/styles.css">
*/

/* ESTILOS GLOBALES Y BODY (Tipografía y Estructura Global) */

body{
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    line-height: 1.6;
    background-color: var(--fondo-general);
    background-image: url(../assets/img/glaciares/glaciar-background.webp);
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: var(--gris-texto);
    margin: 0 auto;
    overflow-x: hidden;
    max-width: 100%;    
    padding: 0 1rem; 
}

.section-contenido {
    background-color: rgba(255, 255, 255, 0.8);
}

.section-presentacion {
    margin-right: -20px;
    margin-left: -20px;
    background-color: var(--fondo-general);
}

.section-presentacion p {
    text-align: center;
}

/*Estilos para la barra de navegación*/

.cards-container {
    width: 100%;
    display: flex;
    flex-wrap: wrap;     
    gap: 20px;             
    justify-content: space-around;
}

.card {
    width: 350px;
    border-radius: 6px;
    overflow: hidden;
    background-color: var(--fondo-general);
    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
    cursor: default;
}

.card img {
    width: 100%;
    height: 210px;    
    object-fit: cover;     
    border-radius: 0;  
}

.card .card-info {
    padding: 15px;
}

header {
    background-color: var(--fondo-general);
    width: 100%;
    height: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    position: fixed;
    top: 0;
    left: 0;
    box-shadow: 0 1px 5px black;
    z-index: 10000;
}

main {
    padding-top: 90px;
}

.logo a img {
    width: 192.5px;
    height: 65px;
}

.nav-links ul {
    display: flex;
    gap: 20px;
    list-style: none;
}

.nav-links ul li a {
    color: var(--encabezado-destacado);
    text-decoration: none;
    padding-left: 10px;
}

.nav-links ul li a:hover {
    background-color: var(--fondo-secundario);
    color: var(--seccion-clave);
}

.active {
    background-color: var(--fondo-secundario);
}

header div button:hover {
    background-color: var(--fondo-secundario);
}

/*ESTILOS GLOBALES SECCIONES DE CONTENIDO (section, article, párrafos)*/

section {
    margin-bottom: 40px;    
    padding: 40px;
}

p {
    font-family: 'Lato', sans-serif;
    text-align: start;
    font-size: 18px;
    line-height: 1.8;
    color: var(--gris-texto);
    padding-left: 1.5rem;
    margin-bottom: 20px; 
}

article {
    background-color: white;
    padding: 40px;
    margin-bottom: 20px;
    border-radius: 20px;
}

/*  Estilo Global para todas las Listas Desordenadas  */

ul {
    
    list-style: none;
    padding-left: 0;
}

main ul li, section ul li {
    color: var(--encabezado-destacado);  
    background-image: url(/assets/icons/drop-icon.svg);
    background-repeat: no-repeat;
    background-size: 18px 18px; 
    background-position: left center;
    padding-left: 30px;  
    margin-bottom: 15px;
    line-height: 1.6;
}


/* Estilos diferenciados para headings */

h1, h2, h3{
    font-family: 'Montserrat', sans-serif;
    color: var(--encabezado-destacado);
}

h1{
    font-size: 2.2rem;
    margin-bottom: 20px;
    padding-bottom: 10px;
    text-align: center;
}

h2{
    font-size: 1.8rem;
    margin-top: 25px;  
    margin-bottom: 30px;
    text-align: center;
}

h3{
    font-size: 1.5rem;
    margin-top: 25px;  
    margin-bottom: 15px;
}
/* Imágenes de gráficos */

figure {
    width: 100%;
}

figure img {
    width: 100%;
    height: 100%;
}

/* Tabla en glaciares-argentinos.html */
.tabla-glaciares {
    width: 100%;
    border-collapse: collapse;
    margin: 30px 0;
    font-size: 1rem;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.tabla-glaciares th {
    background-color: #204564;
    color: #FFFFFF;
    padding: 14px;
    text-align: left;  
}

.tabla-glaciares td {
    padding: 12px;
    border: 1px solid var(--fondo-general);
}

.tabla-glaciares tr:nth-child(even) {
    background-color: var(--fondo-secundario);
}

.tabla-glaciares tr:nth-child(odd) {
    background-color: var(--fondo-general);
}

.tabla-glaciares tr:hover {
    background-color: #204564;
    color: #FFFFFF;
    transition: 0.3s;
}

button{
    background-color: var(--verde-call-to-action); 
    color: #FFFFFF;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;    
    padding: 10px 25px;
    border: #FFFFFF;
    border-radius: 25px;
}

button:hover {
    background-color: #1b5e20;       /* Efecto hover interactivo */
}

.img-tarjeta {
    max-width: 100%;
    height: auto;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(11, 84, 168, 0.596); /* Hace sombra a las imágenes */
    display: block;
    margin: 15px 0;
}

/* TABLA DE PROYECTOS (en programas.html)*/

.tabla-proyectos{
    width: 100%;
    border-collapse: collapse;
    margin: 25px 0;
    background-color: #FFFFFF;
}
/* ... */

